--- a/specs/source/web-api/index.html
+++ b/specs/source/web-api/index.html
@@ -823,7 +823,7 @@ The following example describes an overly-simplified personal use license.
    "dc:format": "text/html",
    "ps:licenseTemplate": "This personal use license allows you to save the 
       purchased item onto any device that you own for your personal enjoyment
-      and make up to &ltspan property=\"ex:physicalCopies\" /> printed
+      and make up to &lt;span property=\"ex:physicalCopies\" /&gt; printed
       copies of the work for personal use."
    "ps:licenseTerms": 
    {
