Changed link from Signature vocabulary to Security Vocabulary.

--- a/specs/index.xhtml
+++ b/specs/index.xhtml
@@ -53,14 +53,14 @@ Transaction processing environment.</li>
 <li><a href="source/web-api">PaySwarm Web API</a> - The main PaySwarm specification
 that describes how to publish digital assets for sale and perform purchases
 on those digital assets in a standards-compliant manner.</li>
-<li><a href="../vocabs/commerce">Commerce Vocabulary</a> - the RDF vocabulary 
+<li><a href="../vocabs/commerce">Commerce Vocabulary</a> - the Web vocabulary 
 that is used to describe commercial transactions on a PaySwarm network.</li>
-<li><a href="../vocabs/payswarm">PaySwarm Vocabulary</a> - the RDF vocabulary 
+<li><a href="../vocabs/payswarm">PaySwarm Vocabulary</a> - the Web vocabulary 
 that is used to describe PaySwarm-specific concepts and properties on a 
 PaySwarm network.</li>
-<li><a href="../vocabs/signature">Digital Signature Vocabulary</a> - 
-the RDF vocabulary that is used to describe mechanisms for creating
-digital signatures as well as the digital signatures themselves.</li>
+<li><a href="../vocabs/security">Security Vocabulary</a> - 
+the Web vocabulary that is used to describe mechanisms for expressing
+digital signatures and encrypting and decrypting messages.</li>
 </ul>
 
 </p>
