Remove expected Web API date.

--- a/index.xhtml
+++ b/index.xhtml
@@ -251,8 +251,7 @@ Transaction processing environment.
 </p>
 
 <p>
-The PaySwarm Web API Specification is coming soon, look for it in the early
-part of next year (around March 2011).
+The PaySwarm Web API Specification is coming soon.
 </p>
 
     </div>
