Fix internal links.

--- a/specs/source/web-api/index.html
+++ b/specs/source/web-api/index.html
@@ -459,11 +459,11 @@ call exiting immediately and not performing the requested
 action. All API requests sent to the <tref>PaySwarm Authority</tref> on 
 behalf of a participant of the network that results in any modification 
 to an internal database MUST be digitally signed by the requestor using the
-steps provided in the <a href="request-signature-algorith">Request Signature
+steps provided in the <a href="#request-signature-algorithm">Request Signature
 Algorithm</a>. All responses to network participants from a
 <tref>PaySwarm Authority</tref> MUST be encrypted according to the steps
 provided in the
-<a href="request-signature-algorith">Response Encryption Algorithm</a>.
+<a href="#response-encryption-algorithm">Response Encryption Algorithm</a>.
         </p>
       </section>
 
