--- a/specs/source/web-api/index.html
+++ b/specs/source/web-api/index.html
@@ -563,7 +563,7 @@ Add a <code>sec:signature</code> key to the <tref>signed message</tref> with
 a JSON object containing the following key-value pairs:
             <dl style="margin-left: 1em;">
               <dt><code>@type</code><dt>
-              <dd><code>sig:JsonLdSignature</code></dd>
+              <dd><code>sec:JsonLdSignature</code></dd>
               <dt><code>dc:created</code><dt>
               <dd>
 The string value of the <tref>combined date and time string</tref> generated
