--- a/specs/source/web-api/index.html
+++ b/specs/source/web-api/index.html
@@ -588,7 +588,7 @@ The following example shows an input <tref>message</tref> and the resulting
 <tref>signed message</tref>:
         </p>
 
-        <pre class="example">
+        <pre class="example prettyprint language-jsonld">
 *** message
 {
    "@context": "http://purl.org/payswarm/v1",
@@ -721,7 +721,7 @@ The following example shows a typical input message and what an encrypted
 message looks like when generated using the algorithm above.
         </p>
 
-        <pre class="example">
+        <pre class="example prettyprint language-jsonld">
 *** message
 {
    "@type": "ps:Preferences"
