--- a/specs/source/web-api/index.html
+++ b/specs/source/web-api/index.html
@@ -915,7 +915,8 @@ JSON-LD response to the <tref>publishing agent</tref>;
               </li>
               <li>The JSON-LD response is compacted and encrypted using the
 public key associated with the registration request according to the
-algorithm defined in <a href="#response-encryption">Response Encryption</a>.
+algorithm defined in
+<a href="#response-encryption-algorithm">Response Encryption Algorithm</a>.
               </li>
               <li>The <tref>encrypted response</tref> is transmitted to the
 <code>registration-callback</code> via an HTTP POST request that is initiatited
