Add missing </section>.

--- a/specs/source/web-api/index.html
+++ b/specs/source/web-api/index.html
@@ -825,6 +825,7 @@ need to be exact on the network while also ensuring that a large database
 is not required for storing nonce values.
           </li>
         </ul>
+      </section>
       
     </section>
 
