Fix closing tag.

--- a/specs/source/web-api/index.html
+++ b/specs/source/web-api/index.html
@@ -945,7 +945,7 @@ is publishing the
 <tref>asset provider</tref>. The registration is accomplished by executing
 the following algorithm:
         <ol class="algorithm">
-          <li>The <tref>publishing agent<tref> generates and stores a 
+          <li>The <tref>publishing agent</tref> generates and stores a 
 public/private keypair that will be used to associate the
 <tref>publishing agent</tref> with the <tref>asset provider</tref>.</li>
           <li>The <tref>publishing agent</tref> retrieves the 
