Added first draft of the Payment Links 1.0 specification.

--- a/specs/source/web-api/index.html
+++ b/specs/source/web-api/index.html
@@ -1088,6 +1088,7 @@ Server: Apache/2.2.19 (Debian)
 {
    "@context": "http://purl.org/payswarm/v1",
    "@subject": "http://payswarm.example.com/i/authority",
+   "ps:registrationService": "http://payswarm.example.com/api/v1/applications",
    "ps:publicKeyService": "http://payswarm.example.com/api/v1/keys",
    "ps:licenseService": "http://payswarm.example.com/api/v1/licenses",
    "ps:contractsService": "http://payswarm.example.com/api/v1/contracts"
