Fixed front-page to point to Web Payments CG and mailing list at W3C.

--- a/index.xhtml
+++ b/index.xhtml
@@ -202,8 +202,11 @@ connect if you don't know how to use IRC</a>.
 <p>
 The <a href="wiki/Introduction">PaySwarm Developer Wiki</a> is a good starting 
 place for those that would like to learn about developing for the PaySwarm 
-platform. The <a href="/listinfo/payswarm-dev">PaySwarm Development Mailing list</a> is available for anyone that would like to
-take part in the design and implementation discussion surrounding PaySwarm.
+platform. Much of the standardization work is done at the World Wide Web
+Consortium (W3C) in the 
+<a href="http://www.w3.org/community/webpayments/">Web Payments Community Group</a>
+, which also has an
+<a href="http://lists.w3.org/Archives/Public/public-webpayments/">active mailing list</a>. 
 </p>
 
     </div>
