--- a/specs/source/web-api/index.html
+++ b/specs/source/web-api/index.html
@@ -191,7 +191,7 @@
           // Team Contact.
           wgPatentURI:  "",
           maxTocLevel: 4,
-          preProcess: [ preProc ],
+          preProcess: [ preProc ]
           //alternateFormats: [ {uri: "diff-20110920.html", label: "diff to previous version"} ],
       };
     </script> 
