Change JsonldSignature to JsonLdSignature.

--- a/specs/source/vocabs/commerce.html
+++ b/specs/source/vocabs/commerce.html
@@ -193,7 +193,7 @@ The following example describes a deposit made using a debit card:
    "com:transfer": [<a href="#Transfer">Transfer</a>*],
    "sig:signature":
    {
-       "@type": "sig:JsonldSignature",
+       "@type": "sig:JsonLdSignature",
        "sig:signer": "http://payswarm.example.com/people/john-doe#key-5",
        "sig:signatureValue": "OWM3YzI4OGQzNGVkMzVmMmQ3ODIyZDY3NjI4NTIyZTk2MzQzNmExMgo="
    }
@@ -854,7 +854,7 @@ approval code of <code>8FGk9347Bo2N83</code>.
    "com:gatewayApprovalCode": "8FGk9347Bo2N83",
    "sig:signature":
    {
-       "@type": "sig:JsonldSignature",
+       "@type": "sig:JsonLdSignature",
        "sig:signer": "http://payswarm.example.com/people/john-doe#key-5",
        "sig:signatureValue": "OWM3YzI4OGQzNGVkMzVmMmQ3ODIyZDY3NjI4NTIyZTk2MzQzNmExMgo="
    }
@@ -914,7 +914,7 @@ the reason in the gateway error code:
    "com:gatewayError": "CREDIT_CARD_DECLINED",
    "sig:signature":
    {
-       "@type": "sig:JsonldSignature",
+       "@type": "sig:JsonLdSignature",
        "sig:signer": "http://payswarm.example.com/people/john-doe#key-5",
        "sig:signatureValue": "OWM3YzI4OGQzNGVkMzVmMmQ3ODIyZDY3NjI4NTIyZTk2MzQzNmExMgo="
    }
@@ -1146,7 +1146,7 @@ The example below expresses that the payment gateway is CyberSource:
    "com:paymentGateway": "CyberSource",
    "sig:signature":
    {
-       "@type": "sig:JsonldSignature",
+       "@type": "sig:JsonLdSignature",
        "sig:signer": "http://payswarm.example.com/people/john-doe#key-5",
        "sig:signatureValue": "OWM3YzI4OGQzNGVkMzVmMmQ3ODIyZDY3NjI4NTIyZTk2MzQzNmExMgo="
    }
@@ -1370,7 +1370,7 @@ The example below shows a source being expressed as a debit card.
    "com:transfer": [<a href="#Transfer">Transfer</a>*],
    "sig:signature":
    {
-       "@type": "sig:JsonldSignature",
+       "@type": "sig:JsonLdSignature",
        "sig:signer": "http://payswarm.example.com/people/john-doe#key-5",
        "sig:signatureValue": "OWM3YzI4OGQzNGVkMzVmMmQ3ODIyZDY3NjI4NTIyZTk2MzQzNmExMgo="
    }
@@ -1438,7 +1438,7 @@ from the owner's bank into their PaySwarm account.
    },
    "sig:signature":
    {
-       "@type": "sig:JsonldSignature",
+       "@type": "sig:JsonLdSignature",
        "sig:signer": "http://payswarm.example.com/people/john-doe#key-5",
        "sig:signatureValue": "OWM3YzI4OGQzNGVkMzVmMmQ3ODIyZDY3NjI4NTIyZTk2MzQzNmExMgo="
    }
